# open_project_automation

./: .gitignore  README.md  crewai_flow.html  mongodb.md  nodejs.md  open_project.md  poem.txt  project_plan.md  project_plan_old.txt  project_plan_sequential.txt  pyproject.toml  react.md  requirements.txt  ui_ux.md
src/project_development/: main.py
src/project_development/crews/open_project_crew/: open_project_crew.py
src/project_development/crews/open_project_crew/config/: agents.yaml  tasks.yaml
src/project_development/crews/project_planning_crew/: project_planning_crew.py
src/project_development/crews/project_planning_crew/config/: agents.yaml  tasks.yaml
